k8s/cart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: D:\Chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: cart
  name: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cart
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: D:\Chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/my-microservice-project-default: "true"
        io.kompose.service: cart
    spec:
      containers:
        - image: k9798909/my-golang-app
          name: cart
          ports:
            - containerPort: 8088
          resources: {}
      restartPolicy: Always
status: {}
